--- a/lib/project_zek_web/components/layouts/app.html.heex
+++ b/lib/project_zek_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<main>
+<main class="bg-gray-800">
   <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
