--- a/lib/project_zek_web/live/pvp_entry_live/index.html.heex
+++ b/lib/project_zek_web/live/pvp_entry_live/index.html.heex
@@ -18,12 +18,11 @@
           <:col :let={{_id, pvp_entry}} label="At level"><%= pvp_entry.killer_level %></:col>
           <:col :let={{_id, pvp_entry}} label="Killed"><%= pvp_entry.victim_name %></:col>
           <:col :let={{_id, pvp_entry}} label="At level"><%= pvp_entry.victim_level %></:col>
-          <:col :let={{_id, pvp_entry}} label="In zone"><%= pvp_entry.zone_id %></:col>
-          <:col :let={{_id, pvp_entry}} label="For"><%= pvp_entry.points %></:col>
+          <:col :let={{_id, pvp_entry}} label="Points"><%= pvp_entry.points %></:col>
           <:col :let={{_id, pvp_entry}} label="At"><%= pvp_entry.timestamp %></:col>
           <:action :let={{_id, pvp_entry}}>
-            <div class="sr-only">
-              <.link navigate={~p"/character_pvp_entries/#{pvp_entry}"}>Show</.link>
+            <div class="flex gap-3">
+              <.link navigate={~p"/pvp_entries/#{pvp_entry.id}/edit"} class="text-indigo-400 hover:underline">Edit</.link>
             </div>
           </:action>
         </.table>
