--- a/lib/project_zek_web/components/layouts/root.html.heex
+++ b/lib/project_zek_web/components/layouts/root.html.heex
@@ -23,7 +23,7 @@
               <div class="hidden md:block">
                 <div class="ml-10 flex items-baseline space-x-4">
                   <a href={~p"/"} class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Home</a>
-                  <a href={~p"/players"} class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Players</a>
+                  <a href={~p"/leaderboard"} class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Leaderboard</a>
                   <a href={~p"/guilds"} class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Guilds</a>
                   <a href={~p"/kills"} class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Screenshots</a>
                 </div>
@@ -49,11 +49,12 @@
                           <a href={~p"/admin/loginserver/accounts"} class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1">Admin: Login Server Accounts</a>
                           <a href={~p"/admin/banned_ips"} class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1">Admin: Banned IPs</a>
                         <% end %>
-                        
-                        <form method="POST" action={~p"/users/log_out"} role="none">
-                          <input type="hidden" name="_method" value="delete" />
-                          <button type="submit" class="block w-full px-4 py-2 text-left text-sm text-gray-700" role="menuitem" tabindex="-1">Sign out</button>
-                        </form>
+                        <%= link "Sign out",
+                              to: ~p"/users/log_out",
+                              method: :delete,
+                              class: "block w-full px-4 py-2 text-left text-sm text-gray-700",
+                              role: "menuitem",
+                              tabindex: "-1" %>
                       </div>
                     </div>
                   </div>
@@ -91,6 +92,7 @@
         <div class="border-t border-gray-700 pb-3 pt-4">
           <%= if @current_user do %>
             <div class="mt-3 space-y-1 px-2">
+              <a href={~p"/leaderboard"} class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Leaderboard</a>
               <a href={~p"/users/settings"} class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Account Settings</a>
               <a href={~p"/loginserver/accounts"} class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Server Accounts</a>
               <%= if @current_user && ProjectZek.LoginServer.superadmin?(@current_user) do %>
@@ -98,10 +100,10 @@
                 <a href={~p"/admin/banned_ips"} class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Admin: Banned IPs</a>
               <% end %>
               
-              <form method="POST" action={~p"/users/log_out"}>
-                <input type="hidden" name="_method" value="delete" />
-                <button class="block w-full text-left rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Sign out</button>
-              </form>
+              <%= link "Sign out",
+                    to: ~p"/users/log_out",
+                    method: :delete,
+                    class: "block w-full text-left rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white" %>
             </div>
           <% else %>
             <div class="mt-3 space-y-1 px-2">
