--- a/lib/project_zek_web/components/layouts/root.html.heex
+++ b/lib/project_zek_web/components/layouts/root.html.heex
@@ -49,12 +49,7 @@
                           <a href={~p"/admin/loginserver/accounts"} class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1">Admin: Login Server Accounts</a>
                           <a href={~p"/admin/banned_ips"} class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1">Admin: Banned IPs</a>
                         <% end %>
-                        <%= link "Sign out",
-                              to: ~p"/users/log_out",
-                              method: :delete,
-                              class: "block w-full px-4 py-2 text-left text-sm text-gray-700",
-                              role: "menuitem",
-                              tabindex: "-1" %>
+                        <.link href={~p"/users/log_out"} data-method="delete" class="block w-full px-4 py-2 text-left text-sm text-gray-700" role="menuitem" tabindex="-1">Sign out</.link>
                       </div>
                     </div>
                   </div>
@@ -100,10 +95,7 @@
                 <a href={~p"/admin/banned_ips"} class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Admin: Banned IPs</a>
               <% end %>
               
-              <%= link "Sign out",
-                    to: ~p"/users/log_out",
-                    method: :delete,
-                    class: "block w-full text-left rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white" %>
+              <.link href={~p"/users/log_out"} data-method="delete" class="block w-full text-left rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Sign out</.link>
             </div>
           <% else %>
             <div class="mt-3 space-y-1 px-2">
