--- a/lib/project_zek_web/components/layouts/root.html.heex
+++ b/lib/project_zek_web/components/layouts/root.html.heex
@@ -49,7 +49,11 @@
                           <a href={~p"/admin/loginserver/accounts"} class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1">Admin: Login Server Accounts</a>
                           <a href={~p"/admin/banned_ips"} class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1">Admin: Banned IPs</a>
                         <% end %>
-                        <.link href={~p"/users/log_out"} data-method="delete" class="block w-full px-4 py-2 text-left text-sm text-gray-700" role="menuitem" tabindex="-1">Sign out</.link>
+                        <form method="POST" action={~p"/users/log_out"} role="none">
+                          <input type="hidden" name="_method" value="delete" />
+                          <input type="hidden" name="_csrf_token" value={get_csrf_token()} />
+                          <button type="submit" class="block w-full px-4 py-2 text-left text-sm text-gray-700" role="menuitem" tabindex="-1">Sign out</button>
+                        </form>
                       </div>
                     </div>
                   </div>
@@ -95,7 +99,11 @@
                 <a href={~p"/admin/banned_ips"} class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Admin: Banned IPs</a>
               <% end %>
               
-              <.link href={~p"/users/log_out"} data-method="delete" class="block w-full text-left rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Sign out</.link>
+              <form method="POST" action={~p"/users/log_out"}>
+                <input type="hidden" name="_method" value="delete" />
+                <input type="hidden" name="_csrf_token" value={get_csrf_token()} />
+                <button class="block w-full text-left rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Sign out</button>
+              </form>
             </div>
           <% else %>
             <div class="mt-3 space-y-1 px-2">
