--- a/lib/project_zek_web/live/gallery_live/show.html.heex
+++ b/lib/project_zek_web/live/gallery_live/show.html.heex
@@ -1,11 +1,5 @@
 <.header>
-  Gallery <%= @gallery.id %>
-  <:subtitle>This is a gallery record from your database.</:subtitle>
-  <:actions>
-    <.link patch={~p"/galleries/#{@gallery}/show/edit"} phx-click={JS.push_focus()}>
-      <.button>Edit gallery</.button>
-    </.link>
-  </:actions>
+  Gallery (feature disabled)
 </.header>
 
 <.list>
@@ -13,15 +7,6 @@
   <:item title="Character data"><%= @gallery.character_data_id %></:item>
 </.list>
 
-<.back navigate={~p"/galleries"}>Back to galleries</.back>
+<div class="text-gray-400 text-sm">Back link disabled.</div>
 
-<.modal :if={@live_action == :edit} id="gallery-modal" show on_cancel={JS.patch(~p"/galleries/#{@gallery}")}>
-  <.live_component
-    module={ProjectZekWeb.GalleryLive.FormComponent}
-    id={@gallery.id}
-    title={@page_title}
-    action={@live_action}
-    gallery={@gallery}
-    patch={~p"/galleries/#{@gallery}"}
-  />
-</.modal>
+<div class="text-gray-400 text-sm mt-2">Edit disabled.</div>
